force-app/main/default/objects/Event_Mng__c/Event_Mng__c.object-meta.xml
<CustomObject>
    <label>Event-Mng</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event-Mngs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>