force-app/main/default/objects/Event_Mng__c/fields/Location_event__c.field-meta.xml
<CustomField>
    <fullName>Location_event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location(event)</label>
    <referenceTo>Location_event__c</referenceTo>
    <relationshipLabel>Event-Mngs</relationshipLabel>
    <relationshipName>Event_Mngs</relationshipName>
    <type>Lookup</type>
</CustomField>