force-app/main/default/objects/Event_Mng__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>