force-app/main/default/objects/Event_Mng__c/validationRules/End_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>End__c &lt;=  Start__c</errorConditionFormula>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>