force-app/main/default/objects/Event_Mng__c/validationRules/In_Person_Event_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Person_Event_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Event_Type__c, &quot;In-Person&quot;),  ISBLANK( Location_event__c  ))</errorConditionFormula>
    <errorMessage>Location is required for In-Person events.</errorMessage>
</ValidationRule>