force-app/main/default/objects/Event_Mng__c/validationRules/Live_checkbox_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Live_checkbox_checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Event_Type__c , &quot;In-Person&quot;),
    NOT( Live__c )
)</errorConditionFormula>
    <errorMessage>Live must be checked for In-Person events.</errorMessage>
</ValidationRule>