force-app/main/default/objects/Event_Mng__c/validationRules/Live_Event_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Live_Event_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Event_Type__c, &quot;Virtual&quot;),
    Live__c = TRUE
)</errorConditionFormula>
    <errorMessage>Virtual events cannot be marked as Live.</errorMessage>
</ValidationRule>