force-app/main/default/objects/Event_Mng__c/validationRules/Recurring_Event_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Event_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Recurring__c &lt;&gt; NOT(ISPICKVAL(Frequency__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Select Frequency only when Recurring is checked.</errorMessage>
</ValidationRule>