force-app/main/default/objects/Event_Mng__c/validationRules/Seat_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Seat_field_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Event_Type__c , &quot;In-Person&quot;),
    ISBLANK( Max_Seats__c )
)</errorConditionFormula>
    <errorMessage>Seat is required for In-Person events.</errorMessage>
</ValidationRule>