force-app/main/default/objects/Event_Mng__c/validationRules/Virtual_Event_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_Event_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Event_Type__c, &quot;Virtual&quot;),
    NOT(ISBLANK( Location_event__c ))
)</errorConditionFormula>
    <errorMessage>Location should not be selected for Virtual events.</errorMessage>
</ValidationRule>