force-app/main/default/objects/Event_Mng__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Live__c</columns>
    <columns>Location_Verified__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>